# flapjack

./: .gitignore  .scrai.toml  AGENTS.md  CLAUDE.md  README.md
engine/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dockerignore  LIB.md  entrypoint.sh  install.sh
engine/.cargo/: config.toml
engine/.config/: nextest.toml
engine/benches/: main_benchmarks.rs  regression_guards.rs
engine/dashboard/: .gitignore  BROWSER_TESTING_STANDARDS_2.md  CLAUDE.md  MOCK_AUDIT_REPORT.md  MULTITENANCY_PLAN.md  README.md  TESTING_OVERHAUL_SUMMARY.md  eslint.config.mjs  index.html  local-instance-config.test.ts  local-instance-config.ts  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
engine/dashboard/_dev/: FEATURES.md  highest_priority_DO_NOT_EDIT.md  synopsis_DO_NOT_EDIT.md
engine/dashboard/_dev/testing/: AI_TESTING_METHODOLOGY.md  HANDOFF.md  OVERHAUL_CHECKLIST.md  TESTING.md
engine/dashboard/data/: keys.json
engine/dashboard/docs/: BDD_SPECIFICATIONS.md
engine/dashboard/scripts/: start-stable-server.sh
engine/dashboard/src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
engine/dashboard/src/components/: ErrorBoundary.tsx
engine/dashboard/src/data/: movies.json  products.json
engine/dashboard/src/hooks/: use-toast.ts  useAnalytics.ts  useApiKeys.ts  useApiLogger.ts  useAuth.ts  useDevMode.ts  useDocuments.ts  useExperiments.ts  useHealth.ts  useIndexFields.ts  useIndexes.ts  useIndexingStatus.ts  useIndices.ts  useMetrics.ts  useQuerySuggestions.ts  useReindex.ts  useRules.ts  useSearch.ts  useSettings.ts  useSnapshots.ts  useSynonyms.ts  useSystemStatus.ts  useTheme.ts
engine/dashboard/src/lib/: api.ts  prometheusParser.ts  types.ts  utils.test.ts  utils.ts
engine/dashboard/src/pages/: Analytics.test.tsx  Analytics.tsx  ApiKeys.test.tsx  ApiKeys.tsx  ExperimentDetail.test.tsx  ExperimentDetail.tsx  Experiments.test.tsx  Experiments.tsx  MerchandisingStudio.test.tsx  MerchandisingStudio.tsx  Metrics.tsx  Migrate.tsx  Overview.test.tsx  Overview.tsx  QuerySuggestions.tsx  Rules.test.tsx  Rules.tsx  SearchBrowse.test.tsx  SearchBrowse.tsx  SearchLogs.tsx  Settings.test.tsx  Settings.tsx  Synonyms.test.tsx  Synonyms.tsx  System.tsx
engine/dashboard/tests/: E2E_UI_COVERAGE_CHECKLIST.md  README.md  global-setup.ts  setup.ts
engine/dashboard/tests/e2e-api/: analytics-api-shapes.spec.ts  analytics-data-api.spec.ts  api-helpers.spec.ts  demo-analytics-api.spec.ts
engine/dashboard/tests/e2e-ui/: cleanup.setup.ts  (+3 more)
engine/flapjack-http/: Cargo.toml
engine/flapjack-http/src/: analytics_cluster.rs  auth.rs  dto.rs  embedder_store.rs  filter_parser.rs  filter_parser_grammar.md  fusion.rs  lib.rs  memory_middleware.rs  middleware.rs  openapi.rs  pause_registry.rs  rollup_broadcaster.rs  server.rs  startup_catchup.rs  usage_middleware.rs
engine/flapjack-replication/: Cargo.toml
engine/flapjack-replication/src/: circuit_breaker.rs  config.rs  lib.rs  manager.rs  peer.rs  task.rs  types.rs
engine/flapjack-server/: Cargo.toml
engine/flapjack-server/src/: main.rs
engine/flapjack-server/tests/: env_mode_test.rs
engine/flapjack-ssl/: Cargo.toml
engine/flapjack-ssl/src/: acme.rs  config.rs  error.rs  lib.rs  manager.rs  mod.rs
engine/s/: ci.sh  dev-server.sh  release.sh
engine/sdk_test/: README.md  TEST_COVERAGE.md  algolia_validation.js  contract_tests.js  debug_highlight.mjs  debug_search.js  package.json  race_test.js  run.sh  test.js  test_algolia_migration.js  test_algolia_multi_pin.js  test_exhaustive_fields.js  test_v4_simple.js
engine/sdk_test/fixtures/: products.json
engine/sdk_test/lib/: cache-manager.js  deep-compare.js  fixtures.js  flapjack-client.js  test-runner.js  wait-for-indexing.js
engine/sdk_test/suites/: core.test.js  facets.test.js  highlighting.test.js  settings.test.js
engine/src/: error.rs  lib.rs  types.rs
engine/src/analytics/: aggregation.rs  collector.rs  config.rs  hll.rs  merge.rs  mod.rs  query.rs  retention.rs  schema.rs  seed.rs  types.rs  writer.rs
engine/src/experiments/: assignment.rs  config.rs  interleaving.rs  metrics.rs  mod.rs  stats.rs  store.rs
engine/src/index/: document.rs  facet_translation.rs  manager.rs  memory.rs  memory_observer.rs  mod.rs  oplog.rs  relevance.rs  rules.rs  s3.rs  schema.rs  settings.rs  snapshot.rs  storage_size.rs  synonyms.rs  task_queue.rs  utils.rs  write_queue.rs  writer.rs
engine/src/integ_tests/: mod.rs  test_analytics.rs  test_analytics_io.rs  test_facets.rs  test_library.rs  test_perf.rs  test_query.rs  test_ranking.rs  test_rules.rs  test_tokenizer.rs
engine/src/query/: filter.rs  fuzzy.rs  geo.rs  highlighter.rs  mod.rs  parser.rs  plurals.rs  splitting.rs  stopwords.rs
engine/src/query_suggestions/: builder.rs  config.rs  mod.rs
engine/src/tokenizer/: cjk_tokenizer.rs  edge_ngram_filter.rs  mod.rs
engine/src/vector/: config.rs  embedder.rs  index.rs  mod.rs  vectors_field.rs
engine/tests/: concat_search_test.rs  debug_concat_test.rs  debug_document_structure.rs  debug_query_parse.rs  dump_indexed_terms.rs  highlighting_test.rs  prefix_last_test.rs  test_admin_key_bootstrap.rs  test_algolia_equivalence.rs  test_algolia_http.rs  test_analytics_aggregation.rs  test_analytics_cleanup.rs  test_analytics_collector.rs  test_analytics_e2e.rs  test_analytics_retention.rs  test_analytics_validation.rs  test_analytics_writer.rs  test_api_keys.rs  test_cold_start_cache_bounds.rs  test_cors.rs  test_custom_ranking.rs  test_distinct.rs  test_docker_e2e.rs  test_experiments.rs  test_facet_limits_and_params.rs  test_facet_regression.rs  test_facet_search_endpoint.rs  test_facets.rs  test_facets_algolia.rs  test_filter_correctness.rs  test_filters.rs  test_geo.rs  test_highlight_bug.rs  test_http_algolia.rs  test_index_ops.rs  test_install.sh  test_json_prefix_search.rs  test_legacy_quickstart_routes.rs  test_library_usage.rs  test_memory_safety.rs  (+25 more)
engine/tests/common/: mod.rs
sdks/python/: MIGRATION.md  README.md  pyproject.toml
sdks/python/flapjacksearch/: __init__.py
sdks/python/tests/: test_search_e2e.py
(+6542 files in other folders)
