[workspace]
members = [
    ".",
    "flapjack-ssl",
    "flapjack-replication",
    "flapjack-http",
    "flapjack-server",
]

[package]
name = "flapjack"
version = "0.1.0"
edition = "2021"
description = "Full-text search engine library with typo tolerance, faceting, and Algolia-compatible conventions"
license = "MIT"
repository = "https://github.com/gridlhq/flapjack"
keywords = ["search", "full-text", "tantivy", "algolia", "faceting"]
categories = ["database", "text-processing"]

[features]
default = ["axum-support", "s3-snapshots", "openapi", "analytics"]
axum-support = ["axum"]
s3-snapshots = ["rust-s3", "flate2", "tar"]
openapi = ["utoipa"]
memory-stats = ["tikv-jemalloc-ctl", "sysinfo"]
analytics = ["dep:datafusion", "dep:arrow", "dep:parquet"]

[dependencies]
tantivy = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
strsim = "0.11"
thiserror = "1.0"
regex = "1"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
http = "1.0"
axum = { version = "0.7", optional = true }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
# uuid = { version = "1.0", features = ["v4"] }
nom = "7.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
indexmap = { version = "2.0", features = ["serde"] }
rand = "0.8"
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
flate2 = { version = "1.1.9", optional = true }
tar = { version = "0.4.44", optional = true }
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.19"
datafusion = { version = "44", default-features = false, features = ["parquet"], optional = true }
arrow = { version = "53", default-features = false, features = ["json"], optional = true }
parquet = { version = "53", default-features = false, features = ["zstd", "async"], optional = true }
hostname = "0.4"
utoipa = { version = "5.3", features = ["uuid"], optional = true }
flapjack-ssl = { path = "flapjack-ssl" }
sysinfo = { version = "0.30", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", features = ["stats"], optional = true }

[patch.crates-io]
tantivy = { git = "https://github.com/stuartcrobinson/tantivy", branch = "nov19" }
# tantivy = { git = "https://github.com/stuartcrobinson/tantivy" }
# tantivy = { git = "https://github.com/stuartcrobinson/tantivy", branch = "my-branch" }
# https://claude.ai/chat/1f2596ab-8f85-494d-a375-4ee30c1f001e

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
criterion = { version = "0.5", features = [
    "html_reports",
    "plotters",
    "cargo_bench_support",
] }
dotenv = "0.15"
serial_test = "3.0"
http-body-util = "0.1"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time", "net", "test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
flapjack-http = { path = "flapjack-http" }
flapjack-replication = { path = "flapjack-replication" }
flapjack-ssl = { path = "flapjack-ssl" }

[[bench]]
name = "main_benchmarks"
harness = false

[[bench]]
name = "regression_guards"
harness = false
