[package]
name = "flapjack-replication"
version = "0.1.0"
edition = "2021"

[dependencies]
flapjack = { path = ".." }
dashmap = "6.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.19"
hostname = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
