[package]
name = "flapjack-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "flapjack"
path = "src/main.rs"

[dependencies]
flapjack = { path = "..", features = ["memory-stats"] }
flapjack-http = { path = "../flapjack-http" }
clap = { version = "4.5.55", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["stats", "background_threads_runtime_support"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
