[package]
name = "flapjack-ssl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["sync", "fs"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
once_cell = "1.19"
dashmap = "6.0"
instant-acme = { version = "0.8", default-features = false, features = ["ring", "hyper-rustls"] }
rcgen = "0.13"
x509-parser = "0.16"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync", "time"] }
