[tool.poetry]
name = "flapjack-search"
version = "0.1.0b1"
description = "A fully-featured and blazing-fast Python API client to interact with Flapjack Search. Drop-in replacement for algoliasearch."
authors = ["Flapjack <support@flapjack.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/flapjackhq/flapjack-search-python"
repository = "https://github.com/flapjackhq/flapjack-search-python"
keywords = ["flapjack", "search", "full-text-search", "algolia-compatible"]
classifiers = [
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Intended Audience :: Developers"
]
packages = [{include = "flapjacksearch"}]

[tool.poetry.dependencies]
python = ">= 3.8.1"
urllib3 = ">= 2.2.3"
aiohttp = ">= 3.10.11"
requests = ">=2.32.3"
python-dateutil = ">= 2.8.2"
async-timeout = ">= 4.0.3"
pydantic = ">= 2"

[tool.poetry.group.dev.dependencies]
ruff = "== 0.14.1"
pyright = "== 1.1.406"
pytest = ">=7.0"
pytest-asyncio = ">=0.21"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
